<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Activity.CreateFoundationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/pictures"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/defaultImageBackground"
                        android:contentDescription="Elegir Imagenes"
                        android:onClick="message"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">

                        <EditText
                            android:id="@+id/et_name_si"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Nombre de la fundación" />


                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">

                        <EditText
                            android:id="@+id/et_address_si"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/icon_email" />


                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">

                        <EditText
                            android:id="@+id/et_phone_si"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/icon_contact" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">

                        <EditText
                            android:id="@+id/et_person_si"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/icon_user" />
                    </android.support.design.widget.TextInputLayout>


                    <ImageButton
                        android:id="@+id/places"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/create_foundation_button_styles"
                        android:src="@drawable/ic_location_on_black_24dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:orientation="horizontal"
                    android:layout_gravity="end">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_Send_si"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/button_save"
                        android:textColor="@color/colorWhite1"
                        android:background="@drawable/create_foundation_buttons_styles"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_Cancel_si"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/button_cancel"
                        android:textColor="@color/colorWhite1"
                        android:background="@drawable/create_foundation_buttons_styles"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>