<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.infoProjectActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_project"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                tools:ignore="ContentDescription">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTransparentwhite">


                    <TextView
                        android:id="@+id/txt_name_proyecto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />




                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/infoLayoutOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="40dp">

                    <ImageView
                        android:id="@+id/imgdesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="#00FFFFFF"
                        android:padding="10dp"
                        android:contentDescription="@string/icon_email"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_email_black_24dp" />

                    <TextView
                        android:id="@+id/txt_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/infoLayoutTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoLayoutOne"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="#00FFFFFF"
                        android:padding="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_contact_phone_black_24dp"
                        android:contentDescription="@string/icon_contact"/>

                    <TextView
                        android:id="@+id/txt_fechaInicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="italic"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/infoLayoutThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoLayoutTwo"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgStakeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="#00FFFFFF"
                        android:padding="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_person_black_24dp"
                        android:contentDescription="@string/icon_user"/>

                    <TextView
                        android:id="@+id/txt_fechaFin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="italic" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/infoLayoutFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoLayoutThree"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgStakeholder2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="#00FFFFFF"
                        android:padding="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_person_black_24dp"
                        android:contentDescription="@string/icon_user"/>

                    <TextView
                        android:id="@+id/txt_cupos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="italic" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>