<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.InfoActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_foundation"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                tools:ignore="ContentDescription">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTransparentwhite">


                    <TextView
                        android:id="@+id/txt_name_foundation_ia"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@id/img_info"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />


                    <ImageView
                        android:id="@+id/img_info"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="12dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toTopOf="@+id/btnllamar"
                        app:layout_constraintDimensionRatio="H,16:9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_name_foundation_ia"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:srcCompat="@android:color/darker_gray" />

                    <ImageButton
                        android:id="@+id/btnllamar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="#00FFFFFF"
                        android:padding="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_info"
                        app:srcCompat="@drawable/ic_call_black_24dp" />

                    <ImageButton
                        android:id="@+id/btn_go_map_ia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:padding="12dp"
                        app:layout_constraintStart_toEndOf="@id/btnllamar"
                        app:layout_constraintTop_toTopOf="@+id/btnllamar"
                        app:srcCompat="@drawable/ic_location_on_black_24dp" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/infoLayoutOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="#00FFFFFF"
                        android:padding="16dp"
                        android:contentDescription="@string/icon_email"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_email_black_24dp" />

                    <TextView
                        android:id="@+id/txt_address_ia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/infoLayoutTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoLayoutOne"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="#00FFFFFF"
                        android:padding="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_contact_phone_black_24dp"
                        android:contentDescription="@string/icon_contact"/>

                    <TextView
                        android:id="@+id/txt_phone_ia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="italic"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/infoLayoutThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoLayoutTwo"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgStakeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="#00FFFFFF"
                        android:padding="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_person_black_24dp"
                        android:contentDescription="@string/icon_user"/>

                    <TextView
                        android:id="@+id/txt_person_ia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="italic" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>